--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: TinkerLab
-Title: Helper Functions from Tinkerbelly
+Title: TinkerLab
 Version: 0.0.9
 Authors@R: 
     person("Bastian", "Reiter", , "bastian.reiter@posteo.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
 Description: Helper Functions from Tinkerbelly
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -15,5 +14,10 @@ Imports:
     ggplot2,
     gt,
     gtExtras,
+    purrr,
+    rlang,
     showtext,
     sysfonts
+Depends: 
+    R (>= 2.10)
+LazyData: true
